Fix line heigth and word wrap on header

--- a/app/src/components/ViewEvent/ViewEvent.module.scss
+++ b/app/src/components/ViewEvent/ViewEvent.module.scss
@@ -23,6 +23,8 @@
 .header {
   @include headerText;
   color: black;
+  word-wrap: break-word;
+  hyphens: auto;
   @media #{$desktop} {
     margin-right: 40px;
   }
